Update parallel model notebook

--- a/notebooks/test_parallel_llm.ipynb
+++ b/notebooks/test_parallel_llm.ipynb
@@ -659,14 +659,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading checkpoint shards: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:01<00:00,  2.10it/s]\n"
+      "Loading checkpoint shards: 100%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:01<00:00,  2.12it/s]\n"
      ]
     }
    ],
@@ -676,16 +676,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_encodings = model.tokenizer(\"Q: Which is the capital of Italy? A:\", return_tensors='pt').to(DEVICE)"
+    "input_encodings = model.tokenizer(\"Q: Was Max Born the grandfather of Olivia Newton-John? A:\", return_tensors='pt').to(DEVICE)\n",
+    "# input_encodings = model.tokenizer(\"Q: Son of an actor, this American guitarist and rock singer released many songs and albums and toured with his band. His name is \\\"Elvis\\\" what? A:\", return_tensors='pt').to(DEVICE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +703,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prallelization rate:  1 - Generated text: '<s> Q: Which is the capital of Italy? A: Rome</s>'\n"
+      "Prallelization rate:  1 - Generated text: '<s> Q: Son of an actor, this American guitarist and rock singer released many songs and albums and toured with his band. His name is \"Elvis\" what? A: Presley is the correct answer. Elvis Presley was an American actor and musician, a major cultural icon of the 2'\n"
      ]
     },
     {
@@ -717,7 +718,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prallelization rate:  2 - Generated text: '<s> Q: Which is the capital of Italy? A:\\n1. S. A. A. A. A. A. A. A. A'\n"
+      "Prallelization rate:  2 - Generated text: '<s> Q: Son of an actor, this American guitarist and rock singer released many songs and albums and toured with his band. His name is \"Elvis\" what? A: The name is not \"Elvis\" - it\\'s \"Stevie\" - the correct answer is \"Stevie'\n"
      ]
     },
     {
@@ -732,45 +733,210 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prallelization rate:  4 - Generated text: '<s> Q: Which is the capital of Italy? A:, , , , , ,,,,,,,,,,'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prallelization rate:  8 - Generated text: '<s> Q: Which is the capital of Italy? A: # # # # # # # # # # # # # # # # # # # #'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prallelization rate: 16 - Generated text: '<s> Q: Which is the capital of Italy? A: -                   '\n",
-      "Prallelization rate: 32 - Generated text: '<s> Q: Which is the capital of Italy? A:---\\n\\n The\\n # # # # # # # # # # # # #'\n"
+      "Prallelization rate:  4 - Generated text: '<s> Q: Son of an actor, this American guitarist and rock singer released many songs and albums and toured with his band. His name is \"Elvis\" what? A: Elvis\\n````\\n\\n``````````````````````````````````````'\n",
+      "Prallelization rate:  8 - Generated text: '<s> Q: Son of an actor, this American guitarist and rock singer released many songs and albums and toured with his band. His name is \"Elvis\" what? A: helly, man, and thespand, . . . . . . . . . . . . . . . .'\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, len(model.transformer_wrapper.layers) + 1):\n",
+    "for i in range(1, 9):  # len(model.transformer_wrapper.layers) + 1):\n",
     "    if len(model.transformer_wrapper.layers) % i == 0:\n",
-    "        output_wrapper = model.generate(input_encodings.input_ids, rate=i, do_sample=False, max_length=32)\n",
+    "        output_wrapper = model.generate(input_encodings.input_ids, rate=i, do_sample=False, max_length=64, recursive=True)\n",
+    "        output_text = model.tokenizer.decode(output_wrapper['input_ids'][0])\n",
+    "        print(f'Prallelization rate: {i:2d} - Generated text: {repr(output_text)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  1 - Generated text: '<s> Q: Was Max Born the grandfather of Olivia Newton-John? A: No, Max Born was not the grandfather of Olivia Newton-John. Max Born was a German-born, British-Jewish physicist, and Olivia Newton-John is an Australian-born singer and actress.'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  2 - Generated text: '<s> Q: Was Max Born the grandfather of Olivia Newton-John? A: 1. S. A.\\n\\n1. A. D. A. A. D. A. A. D. A. A. D. A. A. D. A. A. D. A.'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  4 - Generated text: '<s> Q: Was Max Born the grandfather of Olivia Newton-John? A:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,'\n",
+      "Prallelization rate:  8 - Generated text: '<s> Q: Was Max Born the grandfather of Olivia Newton-John? A: # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 9):  # len(model.transformer_wrapper.layers) + 1):\n",
+    "    if len(model.transformer_wrapper.layers) % i == 0:\n",
+    "        output_wrapper = model.generate(input_encodings.input_ids, rate=i, do_sample=False, max_length=64, recursive=False)\n",
+    "        output_text = model.tokenizer.decode(output_wrapper['input_ids'][0])\n",
+    "        print(f'Prallelization rate: {i:2d} - Generated text: {repr(output_text)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_encodings = model.tokenizer(\"Q: Was Olivia Newton-John the granddaughter of Max Born? A:\", return_tensors='pt').to(DEVICE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  1 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: No, Olivia Newton-John is not the granddaughter of Max Born. Max Born was a German-born physicist, and Olivia Newton-John is an English-Australian singer and actress.</s>'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  2 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: No. The two are unrelated. The late Max Born was a German-British physicist, mathematician, and philosopher of science, best-known for his work in the field of quantum'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  4 - Generated text: \"<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: O Ekwe-E, I meanwhile? A: Good dayn'nènkènènùkụnụnùkụnùkụnùkụnù\\n\\n\"\n",
+      "Prallelization rate:  8 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A:Aheadousadaysaboutabanquabanquabakaard 20 20 20 20 20 20 20 20 20dayday  20 '\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 9):  # len(model.transformer_wrapper.layers) + 1):\n",
+    "    if len(model.transformer_wrapper.layers) % i == 0:\n",
+    "        output_wrapper = model.generate(input_encodings.input_ids, rate=i, do_sample=False, max_length=64, recursive=True)\n",
+    "        output_text = model.tokenizer.decode(output_wrapper['input_ids'][0])\n",
+    "        print(f'Prallelization rate: {i:2d} - Generated text: {repr(output_text)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n",
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  1 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: No, Olivia Newton-John is not the granddaughter of Max Born. Max Born was a German-born physicist, and Olivia Newton-John is an English-Australian singer and actress.</s>'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  2 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: 1. S.\\n\\n1. A: 1. A: 1. A: 1. A: 1. A: 1. A: 1. A: 1. A'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:2 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prallelization rate:  4 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,'\n",
+      "Prallelization rate:  8 - Generated text: '<s> Q: Was Olivia Newton-John the granddaughter of Max Born? A: # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #'\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 9):  # len(model.transformer_wrapper.layers) + 1):\n",
+    "    if len(model.transformer_wrapper.layers) % i == 0:\n",
+    "        output_wrapper = model.generate(input_encodings.input_ids, rate=i, do_sample=False, max_length=64, recursive=False)\n",
     "        output_text = model.tokenizer.decode(output_wrapper['input_ids'][0])\n",
     "        print(f'Prallelization rate: {i:2d} - Generated text: {repr(output_text)}')"
    ]
