Update parallel model notebook

--- a/notebooks/test_parallel_llm.ipynb
+++ b/notebooks/test_parallel_llm.ipynb
@@ -6,7 +6,7 @@
     "collapsed": false
    },
    "source": [
-    "# Preliminary Investigations"
+    "# Preliminary Investigations on Parallel Models"
    ]
   },
   {
