Fix typo in notebook title

--- a/notebooks/eval_parallel_wrapper.ipynb
+++ b/notebooks/eval_parallel_wrapper.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook for experiments regarding Research Question #5"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Research Question 5**: How important is observable context length?"
+    "# Parallel Wrapper Evaluation"
    ]
   },
   {
