Fix parallel model evaluation notebook

--- a/notebooks/eval_parallel_wrapper.ipynb
+++ b/notebooks/eval_parallel_wrapper.ipynb
@@ -355,7 +355,7 @@
     "            log_samples=True,\n",
     "        )\n",
     "        # Save results\n",
-    "        save_res(results, model, config)"
+    "        save_res(results, MODEL, config)"
    ],
    "metadata": {
     "collapsed": false
