--- a/notebooks/eval_parallel_wrapper.ipynb
+++ b/notebooks/eval_parallel_wrapper.ipynb
@@ -344,7 +344,7 @@
     "    if not check_res_exists(MODEL, config):\n",
     "        # Set attn len\n",
     "        for k, v in config.items():\n",
-    "            setattr(model, k, v)\n",
+    "            setattr(model.transformer_wrapper, k, v)\n",
     "        # Run evaluation\n",
     "        results = lm_eval.simple_evaluate(\n",
     "            model=\"hf\",\n",
