--- a/notebooks/eval_parallel_wrapper.ipynb
+++ b/notebooks/eval_parallel_wrapper.ipynb
@@ -276,7 +276,7 @@
     "            for benchmark in results['results']:\n",
     "                data.append({\n",
     "                    'benchmark': benchmark, \n",
-    "                    'score': results[benchmark]['acc_norm,none'], \n",
+    "                    'score': results['results'][benchmark]['acc_norm,none'], \n",
     "                    'model': results['model'], \n",
     "                    **results['config']\n",
     "                })\n",
@@ -394,7 +394,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "results_df.to_csv(os.path.join(EXPERIMENTS_DIR_PATH, f'results_{datetime.now()}.csv'))"
+    "results_df.to_csv(os.path.join(EXPERIMENTS_DIR_PATH, EXPERIMENT_SERIES_ID, f'results_{datetime.now()}.csv'), index=None)"
    ],
    "metadata": {
     "collapsed": false
@@ -434,7 +434,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "fig.savefig(os.path.join(EXPERIMENTS_DIR_PATH, f'results_attn.pdf'))"
+    "fig.savefig(os.path.join(EXPERIMENTS_DIR_PATH, EXPERIMENT_SERIES_ID, f'results_attn.pdf'))"
    ],
    "metadata": {
     "collapsed": false
