Update character level experiment notebook

--- a/notebooks/eval_resizable_wrapper.ipynb
+++ b/notebooks/eval_resizable_wrapper.ipynb
@@ -215,7 +215,7 @@
     "TOKENIZER = MODEL\n",
     "TOKENIZER_CONFIGS = {'token': TOKEN, 'pad_token': '</s>'}\n",
     "WRAPPER_CONFIGS_KEYS: List[str] = ['max_token_len']\n",
-    "WRAPPER_CONFIGS_VALUES: List[str] = [[1, 2, 3, 4, 5, 6, 7, 8, None]]"
+    "WRAPPER_CONFIGS_VALUES: List = [[1, 2, 3, 4, 5, 6, 7, 8, None]]"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "source": [
     "def load_results_df():\n",
     "    file_path = os.path.join(EXPERIMENTS_DIR_PATH, EXPERIMENT_SERIES_ID, 'results.csv')\n",
-    "    return pd.read_csv(file_path, index=False)"
+    "    return pd.read_csv(file_path)"
    ]
   },
   {
@@ -482,7 +482,7 @@
     "        print(f\"## Configs: {configs}\")\n",
     "        # Run evaluation (if results are not avaialble yet)\n",
     "        if not check_results_exist(configs, benchmark):\n",
-    "            # Set attribute values  # TODO fixme\n",
+    "            # Set attribute values  # TODO fixme\n",
     "            for k, v in configs.items():\n",
     "                setattr(model, k, v)\n",
     "            # Run evaluation\n",
@@ -737,12 +737,10 @@
    "outputs": [],
    "source": [
     "null_acc_norm_mask = results_df['acc_norm,none'].isnull()\n",
-    "null_acc_norm_mask\n",
     "results_df['accuracy'] = results_df['acc,none']\n",
     "results_df.loc[~null_acc_norm_mask, 'accuracy'] = results_df[~null_acc_norm_mask]['acc_norm,none'].values\n",
     "\n",
     "null_max_token_len_mask = results_df['max_token_len'].isnull()\n",
-    "null_max_token_len_mask\n",
     "results_df.loc[null_max_token_len_mask, 'max_token_len'] = 5\n",
     "results_df['max_token_len'] = results_df['max_token_len'].astype(int)\n",
     "\n",
