Update example speech wrapper example notebook

--- a/notebooks/speech_transformer.ipynb
+++ b/notebooks/speech_transformer.ipynb
@@ -56,8 +56,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:40.804311Z",
-     "start_time": "2024-10-11T16:29:40.132099Z"
+     "end_time": "2024-10-14T08:18:27.208852Z",
+     "start_time": "2024-10-14T08:18:26.578430Z"
     }
    },
    "id": "dad5c72c42686d67",
@@ -76,13 +76,14 @@
     }
    ],
    "source": [
-    "from transformers import BitsAndBytesConfig"
+    "from transformers import BitsAndBytesConfig\n",
+    "from peft import LoraConfig"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:40.951193Z",
-     "start_time": "2024-10-11T16:29:40.805107Z"
+     "end_time": "2024-10-14T08:18:27.760323Z",
+     "start_time": "2024-10-14T08:18:27.209769Z"
     }
    },
    "id": "1da0d0b936e4c968",
@@ -97,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:42.011008Z",
-     "start_time": "2024-10-11T16:29:40.951721Z"
+     "end_time": "2024-10-14T08:18:28.312878Z",
+     "start_time": "2024-10-14T08:18:27.760848Z"
     }
    },
    "id": "2baf878f3b022d7a",
@@ -123,8 +124,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:42.013405Z",
-     "start_time": "2024-10-11T16:29:42.011820Z"
+     "end_time": "2024-10-14T08:18:28.315201Z",
+     "start_time": "2024-10-14T08:18:28.313660Z"
     }
    },
    "id": "f69813390cefb01",
@@ -148,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:42.015992Z",
-     "start_time": "2024-10-11T16:29:42.013807Z"
+     "end_time": "2024-10-14T08:18:28.317804Z",
+     "start_time": "2024-10-14T08:18:28.315523Z"
     }
    },
    "id": "23bd06e783d5cb",
@@ -169,12 +170,35 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:42.018808Z",
-     "start_time": "2024-10-11T16:29:42.016319Z"
+     "end_time": "2024-10-14T08:18:28.320249Z",
+     "start_time": "2024-10-14T08:18:28.318122Z"
     }
    },
    "id": "b0632824bc83333b",
    "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "LORA_CONFIGS = LoraConfig(\n",
+    "    target_modules='all-linear',\n",
+    "    lora_alpha=16,\n",
+    "    lora_dropout=0.1,\n",
+    "    r=16,\n",
+    "    bias='none',\n",
+    "    task_type='CAUSAL_LM'\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-14T08:18:28.322204Z",
+     "start_time": "2024-10-14T08:18:28.320563Z"
+    }
+   },
+   "id": "6dbebabb7e185b67",
+   "execution_count": 7
   },
   {
    "cell_type": "code",
@@ -183,6 +207,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/vincenzoscotti/anaconda3/envs/trwrap/lib/python3.12/site-packages/peft/tuners/lora/layer.py:861: UserWarning: fan_in_fan_out is set to False but the target module is `Conv1D`. Setting fan_in_fan_out to True.\n",
+      "  warnings.warn(\n",
       "/home/vincenzoscotti/anaconda3/envs/trwrap/lib/python3.12/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
       "  warnings.warn(\n"
      ]
@@ -193,18 +219,19 @@
     "    MODEL,\n",
     "    model_kwargs=MODEL_CONFIGS,\n",
     "    # quantization_configs=QUANTIZATION_CONFIGS,\n",
+    "    lora_configs=LORA_CONFIGS,\n",
     "    tokenizer_kwargs=TOKENIZER_CONFIGS\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:43.710738Z",
-     "start_time": "2024-10-11T16:29:42.019155Z"
+     "end_time": "2024-10-14T08:18:29.816137Z",
+     "start_time": "2024-10-14T08:18:28.322509Z"
     }
    },
    "id": "3e6f4622200bc799",
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -223,7 +250,7 @@
      "data": {
       "text/plain": "Ellipsis"
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,12 +261,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:43.714804Z",
-     "start_time": "2024-10-11T16:29:43.711536Z"
+     "end_time": "2024-10-14T08:18:29.819550Z",
+     "start_time": "2024-10-14T08:18:29.817090Z"
     }
    },
    "id": "8f16202dca51ec68",
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -262,12 +289,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:43.717951Z",
-     "start_time": "2024-10-11T16:29:43.716227Z"
+     "end_time": "2024-10-14T08:18:29.821721Z",
+     "start_time": "2024-10-14T08:18:29.820243Z"
     }
    },
    "id": "caf8525c5ed62f05",
-   "execution_count": 9
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -278,12 +305,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:43.720101Z",
-     "start_time": "2024-10-11T16:29:43.718580Z"
+     "end_time": "2024-10-14T08:18:31.870333Z",
+     "start_time": "2024-10-14T08:18:31.868635Z"
     }
    },
    "id": "bd2427db585594c9",
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -294,12 +321,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:44.031833Z",
-     "start_time": "2024-10-11T16:29:43.720743Z"
+     "end_time": "2024-10-14T08:18:32.624784Z",
+     "start_time": "2024-10-14T08:18:32.254574Z"
     }
    },
    "id": "17955e75a9bd184",
-   "execution_count": 11
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -308,7 +335,7 @@
      "data": {
       "text/plain": "torch.Size([128, 402])"
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,12 +346,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:29:44.040171Z",
-     "start_time": "2024-10-11T16:29:44.032857Z"
+     "end_time": "2024-10-14T08:18:32.633446Z",
+     "start_time": "2024-10-14T08:18:32.629975Z"
     }
    },
    "id": "9e321bf389a8b2d7",
-   "execution_count": 12
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -335,8 +362,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:30:49.317361Z",
-     "start_time": "2024-10-11T16:30:43.132482Z"
+     "end_time": "2024-10-14T08:18:33.475878Z",
+     "start_time": "2024-10-14T08:18:33.358709Z"
     }
    },
    "id": "408d2726c9989a5a",
@@ -344,56 +371,18 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "position_ids\n",
-      "past_key_values\n",
-      "batch_size\n",
-      "prefix_length\n",
-      "sequence_length\n",
-      "cache_position\n",
-      "dtype\n",
-      "device\n",
-      "speech_mask\n",
-      "attention_mask\n",
-      "add_attn_residual\n",
-      "add_ffnn_residual\n",
-      "use_cache\n",
-      "output_attentions\n",
-      "output_hidden_states\n",
-      "return_intermediate_hidden_states\n",
-      "return_attention_output\n",
-      "return_feed_forward_up_proj_output\n",
-      "return_feed_forward_gate_output\n",
-      "return_feed_forward_inner_activations\n",
-      "return_feed_forward_output\n",
-      "output_hidden_state\n",
-      "logits\n",
-      "spectrograms\n",
-      "modality_mask\n",
-      "loss\n",
-      "cache\n",
-      "hidden_states\n",
-      "attention_weights\n",
-      "return_dict\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for k in output:\n",
-    "    print(k)"
+    "target_output = model.prepare_output(text, audio_file_path)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:30:53.540754Z",
-     "start_time": "2024-10-11T16:30:53.538362Z"
+     "end_time": "2024-10-14T08:18:33.838022Z",
+     "start_time": "2024-10-14T08:18:33.827904Z"
     }
    },
-   "id": "bb26fd7feb4ebfaa",
+   "id": "882c13cf8d57566c",
    "execution_count": 15
   },
   {
@@ -401,7 +390,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[tensor([[-10.7500, -10.2500,   5.1875,  ...,   2.8125,   1.5625,  -3.0938],\n         [ -2.5312, -10.1875,   1.9609,  ...,   1.0625,  -3.2031,  -3.9219],\n         [ -5.4375,   4.4688,  -8.2500,  ...,   0.6172,  -4.5000,  -0.3613],\n         ...,\n         [  1.9297,  -7.7188, -11.8125,  ...,   0.1885,  -2.0781,  -2.0156],\n         [ -6.5938, -16.8750,  -0.0503,  ...,   0.4629,  -0.3027,   0.1143],\n         [  4.0000,  -1.1328,  12.3750,  ...,  -2.3281,  -2.0000,  -0.5820]],\n        dtype=torch.bfloat16, grad_fn=<SqueezeBackward1>)]"
+      "text/plain": "torch.Size([128, 402])"
      },
      "execution_count": 16,
      "metadata": {},
@@ -409,17 +398,48 @@
     }
    ],
    "source": [
-    "output['spectrograms']"
+    "target_output['target_spectrograms'][0].size()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-11T16:31:07.613229Z",
-     "start_time": "2024-10-11T16:31:07.610283Z"
+     "end_time": "2024-10-14T08:18:34.745004Z",
+     "start_time": "2024-10-14T08:18:34.742510Z"
     }
    },
-   "id": "99eaecb37cba8a9f",
+   "id": "402211a5f8f748e",
    "execution_count": 16
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(tensor(13674.4873, grad_fn=<AddBackward0>),\n {'language_modelling_loss': tensor(24.9689, grad_fn=<NllLossBackward0>),\n  'spectrogram_generation_loss': tensor(13649.5186, grad_fn=<MeanBackward0>)})"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss = model._loss(\n",
+    "    token_logits=output['logits'],\n",
+    "    token_labels=target_output['token_labels'],\n",
+    "    predicted_spectrograms=output['spectrograms'],\n",
+    "    target_spectrograms=target_output['target_spectrograms']\n",
+    ")\n",
+    "loss"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-14T08:18:35.415462Z",
+     "start_time": "2024-10-14T08:18:35.399055Z"
+    }
+   },
+   "id": "bb26fd7feb4ebfaa",
+   "execution_count": 17
   },
   {
    "cell_type": "code",
@@ -428,7 +448,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "daa7aa7b78278324"
+   "id": "9c7d728544919462"
   }
  ],
  "metadata": {
