Fix naming and refernces for ContextWrapper

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -104,7 +104,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3e44ed2aaa049bc8caf645dc53dda8c",
+       "model_id": "a5127fafbc6040ec9b66f8d230c169a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "model = CausalLMWrapper.from_pretrained(MODEL, model_kwargs=MODEL_CONFIGS, tokenizer_name_or_path=TOKENIZER, tokenizer_kwargs=TOKENIZER_CONFIGS)\n",
+    "model = ContextCausalLMWrapper.from_pretrained(MODEL, model_kwargs=MODEL_CONFIGS, tokenizer_name_or_path=TOKENIZER, tokenizer_kwargs=TOKENIZER_CONFIGS)\n",
     "model.enable_benchmarking()"
    ]
   },
@@ -206,6 +206,13 @@
    "source": [
     "output.attentions[8][0][0, 0, 0, :]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
