Fix pythia variable attention wrapper

--- a/notebooks/test_attention_mask.ipynb
+++ b/notebooks/test_attention_mask.ipynb
@@ -71,7 +71,8 @@
     "# MODEL = 'gpt2-xl'\n",
     "# MODEL = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# MODEL = 'meta-llama/Llama-2-7b-hf'\n",
-    "MODEL = 'google/gemma-7b'\n",
+    "#MODEL = 'google/gemma-7b'\n",
+    "MODEL = 'EleutherAI/pythia-14m'\n",
     "MODEL_CONFIGS = {\n",
     "    'torch_dtype': torch.bfloat16,\n",
     "    'attn_implementation': 'eager',\n",
@@ -82,7 +83,9 @@
     "# TOKENIZER = 'gpt2-xl'\n",
     "# TOKENIZER = 'mistralai/Mistral-7B-Instruct-v0.2'  \n",
     "# TOKENIZER = 'meta-llama/Llama-2-7b-hf'\n",
-    "TOKENIZER = 'google/gemma-7b'\n",
+    "#TOKENIZER = 'google/gemma-7b'\n",
+    "TOKENIZER = 'EleutherAI/pythia-14m'\n",
+    "\n",
     "TOKENIZER_CONFIGS = {'token': TOKEN}"
    ]
   },
@@ -90,32 +93,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`config.hidden_act` is ignored, you should use `config.hidden_activation` instead.\n",
-      "Gemma's activation function will be set to `gelu_pytorch_tanh`. Please, use\n",
-      "`config.hidden_activation` if you want to override this behaviour.\n",
-      "See https://github.com/huggingface/transformers/pull/29402 for more details.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02f452ee68f34ef7ba90eb4b6971501c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = ContextCausalLMWrapper.from_pretrained(MODEL, \n",
     "                                               att_len=2,\n",
@@ -128,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +115,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
+      "Setting `pad_token_id` to `eos_token_id`:0 for open-end generation.\n",
+      "The attention mask is not set and cannot be inferred from input because pad token is same as eos token. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n"
+     ]
+    }
+   ],
    "source": [
     "output = model.generate(input_encodings.input_ids,\n",
     "                        do_sample=False, \n",
@@ -196,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<bos>The capital of Italy is is is is is is is is is is is is is is is is is is is is'"
+       "'The capital of Italy is,!!!<|endoftext|>'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,22 +204,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1., 0., 0., 0., 0., 0.], dtype=torch.bfloat16)"
+       "tensor([0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.3750, 0.6250],\n",
+       "       dtype=torch.bfloat16)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output.attentions[0][0][0, 0, 0, :]"
+    "output.attentions[2][0][0, 0, 0, :]"
    ]
   }
  ],
