--- a/notebooks/test_pythia.ipynb
+++ b/notebooks/test_pythia.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -184,16 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The capital of Italy is,!,,,,,,!,,,! in,,!,, in'"
+       "'The capital of Italy is,,<|endoftext|>'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,6 +201,13 @@
    "source": [
     "model.tokenizer.decode(output['sequences'].squeeze())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
