--- a/notebooks/speech_transformer.ipynb
+++ b/notebooks/speech_transformer.ipynb
@@ -40,8 +40,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:15.330344Z",
-     "start_time": "2024-10-15T13:23:15.329100Z"
+     "end_time": "2024-10-17T08:53:40.194847Z",
+     "start_time": "2024-10-17T08:53:40.192509Z"
     }
    },
    "id": "3ce5db8a5a94b70f",
@@ -56,8 +56,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:15.919595Z",
-     "start_time": "2024-10-15T13:23:15.345844Z"
+     "end_time": "2024-10-17T08:53:40.828699Z",
+     "start_time": "2024-10-17T08:53:40.257076Z"
     }
    },
    "id": "dad5c72c42686d67",
@@ -82,8 +82,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.432800Z",
-     "start_time": "2024-10-15T13:23:15.920361Z"
+     "end_time": "2024-10-17T08:53:41.327163Z",
+     "start_time": "2024-10-17T08:53:40.829435Z"
     }
    },
    "id": "1da0d0b936e4c968",
@@ -98,8 +98,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.952475Z",
-     "start_time": "2024-10-15T13:23:16.433345Z"
+     "end_time": "2024-10-17T08:53:41.847568Z",
+     "start_time": "2024-10-17T08:53:41.327647Z"
     }
    },
    "id": "2baf878f3b022d7a",
@@ -124,8 +124,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.954702Z",
-     "start_time": "2024-10-15T13:23:16.953252Z"
+     "end_time": "2024-10-17T08:53:41.849941Z",
+     "start_time": "2024-10-17T08:53:41.848241Z"
     }
    },
    "id": "f69813390cefb01",
@@ -149,8 +149,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.957119Z",
-     "start_time": "2024-10-15T13:23:16.955065Z"
+     "end_time": "2024-10-17T08:53:41.852353Z",
+     "start_time": "2024-10-17T08:53:41.850379Z"
     }
    },
    "id": "23bd06e783d5cb",
@@ -170,8 +170,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.959770Z",
-     "start_time": "2024-10-15T13:23:16.957441Z"
+     "end_time": "2024-10-17T08:53:41.855343Z",
+     "start_time": "2024-10-17T08:53:41.852710Z"
     }
    },
    "id": "b0632824bc83333b",
@@ -193,8 +193,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:16.961447Z",
-     "start_time": "2024-10-15T13:23:16.960146Z"
+     "end_time": "2024-10-17T08:53:41.857080Z",
+     "start_time": "2024-10-17T08:53:41.855723Z"
     }
    },
    "id": "6dbebabb7e185b67",
@@ -226,8 +226,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:17.744596Z",
-     "start_time": "2024-10-15T13:23:16.961759Z"
+     "end_time": "2024-10-17T08:53:42.827645Z",
+     "start_time": "2024-10-17T08:53:41.857586Z"
     }
    },
    "id": "3e6f4622200bc799",
@@ -261,8 +261,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:17.748083Z",
-     "start_time": "2024-10-15T13:23:17.745066Z"
+     "end_time": "2024-10-17T08:53:42.831481Z",
+     "start_time": "2024-10-17T08:53:42.828255Z"
     }
    },
    "id": "8f16202dca51ec68",
@@ -287,8 +287,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:17.750754Z",
-     "start_time": "2024-10-15T13:23:17.749095Z"
+     "end_time": "2024-10-17T08:53:42.834478Z",
+     "start_time": "2024-10-17T08:53:42.832538Z"
     }
    },
    "id": "caf8525c5ed62f05",
@@ -303,8 +303,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:17.753049Z",
-     "start_time": "2024-10-15T13:23:17.751069Z"
+     "end_time": "2024-10-17T08:53:42.836315Z",
+     "start_time": "2024-10-17T08:53:42.835137Z"
     }
    },
    "id": "bd2427db585594c9",
@@ -319,8 +319,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.142303Z",
-     "start_time": "2024-10-15T13:23:17.753375Z"
+     "end_time": "2024-10-17T08:53:43.227734Z",
+     "start_time": "2024-10-17T08:53:42.836602Z"
     }
    },
    "id": "17955e75a9bd184",
@@ -356,8 +356,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.144985Z",
-     "start_time": "2024-10-15T13:23:18.142827Z"
+     "end_time": "2024-10-17T08:53:43.232227Z",
+     "start_time": "2024-10-17T08:53:43.229017Z"
     }
    },
    "id": "9e321bf389a8b2d7",
@@ -372,8 +372,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.217175Z",
-     "start_time": "2024-10-15T13:23:18.145335Z"
+     "end_time": "2024-10-17T08:53:43.350538Z",
+     "start_time": "2024-10-17T08:53:43.232883Z"
     }
    },
    "id": "408d2726c9989a5a",
@@ -397,8 +397,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.219806Z",
-     "start_time": "2024-10-15T13:23:18.217686Z"
+     "end_time": "2024-10-17T08:53:43.353619Z",
+     "start_time": "2024-10-17T08:53:43.351335Z"
     }
    },
    "id": "736273b5305a3e3a",
@@ -413,8 +413,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.319132Z",
-     "start_time": "2024-10-15T13:23:18.220229Z"
+     "end_time": "2024-10-17T08:53:43.456131Z",
+     "start_time": "2024-10-17T08:53:43.354207Z"
     }
    },
    "id": "882c13cf8d57566c",
@@ -438,8 +438,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.321308Z",
-     "start_time": "2024-10-15T13:23:18.319556Z"
+     "end_time": "2024-10-17T08:53:43.459075Z",
+     "start_time": "2024-10-17T08:53:43.456942Z"
     }
    },
    "id": "402211a5f8f748e",
@@ -450,7 +450,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "(tensor(3624.9373, grad_fn=<AddBackward0>),\n {'language_modelling_loss': tensor(20.1023, grad_fn=<NllLossBackward0>),\n  'spectrogram_generation_loss': tensor(3604.8350, grad_fn=<MseLossBackward0>)})"
+      "text/plain": "(tensor(3634.9307, grad_fn=<AddBackward0>),\n {'language_modelling_loss': tensor(20.2639, grad_fn=<NllLossBackward0>),\n  'spectrogram_generation_loss': tensor(3614.6667, grad_fn=<MseLossBackward0>)})"
      },
      "execution_count": 19,
      "metadata": {},
@@ -469,8 +469,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.331653Z",
-     "start_time": "2024-10-15T13:23:18.321680Z"
+     "end_time": "2024-10-17T08:53:43.472369Z",
+     "start_time": "2024-10-17T08:53:43.459608Z"
     }
    },
    "id": "bb26fd7feb4ebfaa",
@@ -494,8 +494,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.334059Z",
-     "start_time": "2024-10-15T13:23:18.332088Z"
+     "end_time": "2024-10-17T08:53:43.474763Z",
+     "start_time": "2024-10-17T08:53:43.472813Z"
     }
    },
    "id": "4adf903ff9a40b65",
@@ -519,8 +519,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.348167Z",
-     "start_time": "2024-10-15T13:23:18.334510Z"
+     "end_time": "2024-10-17T08:53:43.487443Z",
+     "start_time": "2024-10-17T08:53:43.475231Z"
     }
    },
    "id": "424d3d70f74ce1da",
@@ -545,8 +545,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.350958Z",
-     "start_time": "2024-10-15T13:23:18.348584Z"
+     "end_time": "2024-10-17T08:53:43.491512Z",
+     "start_time": "2024-10-17T08:53:43.488098Z"
     }
    },
    "id": "128adfd9db3d097e",
@@ -556,18 +556,10 @@
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "The following `model_kwargs` are not used by the model: ['input_ids', 'attention_mask'] (note: typos in the generate arguments will also show up in this list)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[23], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m ids, specs \u001B[38;5;241m=\u001B[39m \u001B[43mmodel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgenerate\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43minput_encoding\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mmax_new_tokens\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m4\u001B[39;49m\u001B[43m)\u001B[49m\n\u001B[1;32m      2\u001B[0m \u001B[38;5;66;03m# ids, specs = model.generate(input_encoding.input_ids, max_new_tokens=4)\u001B[39;00m\n",
-      "File \u001B[0;32m/tmp/pycharm_project_13/src/transformer_wrappers/wrappers/speech.py:662\u001B[0m, in \u001B[0;36mSpeechCausalLMWrapper.generate\u001B[0;34m(self, return_inner_states, *args, **kwargs)\u001B[0m\n\u001B[1;32m    660\u001B[0m generated_spectrograms \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mlist\u001B[39m()\n\u001B[1;32m    661\u001B[0m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[0;32m--> 662\u001B[0m generate_output \u001B[38;5;241m=\u001B[39m \u001B[43mPreTrainedModel\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mgenerate\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    663\u001B[0m \u001B[43m    \u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mgenerated_spectrograms\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mgenerated_spectrograms\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\n\u001B[1;32m    664\u001B[0m \u001B[43m\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    665\u001B[0m \u001B[38;5;66;03m#\u001B[39;00m\n\u001B[1;32m    666\u001B[0m \u001B[38;5;66;03m# TODO: handle guided generation vs normal generation case\u001B[39;00m\n\u001B[1;32m    667\u001B[0m generated_spectrograms \u001B[38;5;241m=\u001B[39m torch\u001B[38;5;241m.\u001B[39mcat(generated_spectrograms, dim\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n",
-      "File \u001B[0;32m~/anaconda3/envs/trwrap/lib/python3.12/site-packages/torch/utils/_contextlib.py:116\u001B[0m, in \u001B[0;36mcontext_decorator.<locals>.decorate_context\u001B[0;34m(*args, **kwargs)\u001B[0m\n\u001B[1;32m    113\u001B[0m \u001B[38;5;129m@functools\u001B[39m\u001B[38;5;241m.\u001B[39mwraps(func)\n\u001B[1;32m    114\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mdecorate_context\u001B[39m(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs):\n\u001B[1;32m    115\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m ctx_factory():\n\u001B[0;32m--> 116\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfunc\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/anaconda3/envs/trwrap/lib/python3.12/site-packages/transformers/generation/utils.py:1689\u001B[0m, in \u001B[0;36mGenerationMixin.generate\u001B[0;34m(self, inputs, generation_config, logits_processor, stopping_criteria, prefix_allowed_tokens_fn, synced_gpus, assistant_model, streamer, negative_prompt_ids, negative_prompt_attention_mask, **kwargs)\u001B[0m\n\u001B[1;32m   1687\u001B[0m tokenizer \u001B[38;5;241m=\u001B[39m kwargs\u001B[38;5;241m.\u001B[39mpop(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtokenizer\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mNone\u001B[39;00m)  \u001B[38;5;66;03m# Pull this out first, we only use it for stopping criteria\u001B[39;00m\n\u001B[1;32m   1688\u001B[0m generation_config, model_kwargs \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_prepare_generation_config(generation_config, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m-> 1689\u001B[0m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_validate_model_kwargs\u001B[49m\u001B[43m(\u001B[49m\u001B[43mmodel_kwargs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcopy\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1690\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_validate_assistant(assistant_model)\n\u001B[1;32m   1692\u001B[0m \u001B[38;5;66;03m# 2. Set generation parameters if not already defined\u001B[39;00m\n",
-      "File \u001B[0;32m~/anaconda3/envs/trwrap/lib/python3.12/site-packages/transformers/generation/utils.py:1243\u001B[0m, in \u001B[0;36mGenerationMixin._validate_model_kwargs\u001B[0;34m(self, model_kwargs)\u001B[0m\n\u001B[1;32m   1240\u001B[0m         unused_model_args\u001B[38;5;241m.\u001B[39mappend(key)\n\u001B[1;32m   1242\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m unused_model_args:\n\u001B[0;32m-> 1243\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[1;32m   1244\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mThe following `model_kwargs` are not used by the model: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00munused_model_args\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m (note: typos in the\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   1245\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m generate arguments will also show up in this list)\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m   1246\u001B[0m     )\n",
-      "\u001B[0;31mValueError\u001B[0m: The following `model_kwargs` are not used by the model: ['input_ids', 'attention_mask'] (note: typos in the generate arguments will also show up in this list)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
      ]
     }
    ],
@@ -578,8 +570,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-10-15T13:23:18.583263Z",
-     "start_time": "2024-10-15T13:23:18.351580Z"
+     "end_time": "2024-10-17T08:53:43.869933Z",
+     "start_time": "2024-10-17T08:53:43.492285Z"
     }
    },
    "id": "8e538355112374cc",
@@ -587,28 +579,53 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[ 8291,    66,  4892,   262,  1708,  6597, 10651,    25,   198, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257, 50257,\n         50257, 50257, 50257, 50257, 50257, 50257,   198,   198,  8291,  6820,\n            25,   198,     1,   818,   257,  7604,   287,   262,  2323,   612,\n          5615,   257, 32724,  2545,   526, 50257, 50257, 50257, 50257]])"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import inspect\n",
-    "set(inspect.signature(model.prepare_inputs_for_generation).parameters)"
+    "ids"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-17T08:53:43.873106Z",
+     "start_time": "2024-10-17T08:53:43.870719Z"
+    }
    },
-   "id": "c279a97e59f8a398",
-   "execution_count": null
+   "id": "af0851951d865e47",
+   "execution_count": 24
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[[    nan,     nan,     nan,  ...,  0.0524, -0.3149,  0.5077],\n         [    nan,     nan,     nan,  ..., -0.7762, -0.3863,  0.4043],\n         [    nan,     nan,     nan,  ..., -0.2447, -0.6477,  0.3145],\n         ...,\n         [    nan,     nan,     nan,  ..., -0.5020, -0.4748,  0.4301],\n         [    nan,     nan,     nan,  ...,  0.0308, -1.0451,  0.3360],\n         [    nan,     nan,     nan,  ..., -0.0934,  0.5593, -0.2245]]])"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "set(inspect.signature(model.forward).parameters)"
+    "specs"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-17T08:53:55.107840Z",
+     "start_time": "2024-10-17T08:53:55.104988Z"
+    }
    },
-   "id": "fb5537f7a7543c57",
-   "execution_count": null
+   "id": "bc98edcf89963554",
+   "execution_count": 25
   },
   {
    "cell_type": "markdown",
